<?xml version="1.0"?>
<package format="3">
  <name>zhang_pkg</name>
  <version>0.0.1</version>
  <description>ROS2 Humble homework package with message, service and action examples.</description>
  <maintainer email="student@example.com">Zhang</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
